kubernetes/backend/pv3b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: sol45invictus/p-backend:v1.0.0
          name: pv3b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: app-postgre-db-ca
              mountPath: /etc/ssl/postgres
              readOnly: true
      volumes:
        - name: app-postgre-db-ca
          secret:
            secretName: app-postgre-db-ca
